[package]
name = "sp-consensus-coco"
version = "0.1.0"
description = "Primitives for Coco consensus"
authors = ["Estatetial <info@estatetial.com>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://estatetial.com"
repository = "https://github.com/estatetial/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-application-crypto = { version = "6.0.0", default-features = false, path = "../../application-crypto" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0", default-features = false, path = "../../std" }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../api" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../../runtime" }
sp-inherents = { version = "4.0.0-dev", default-features = false, path = "../../inherents" }
sp-timestamp = { version = "4.0.0-dev", default-features = false, path = "../../timestamp" }
sp-consensus-slots = { version = "0.10.0-dev", default-features = false, path = "../slots" }
sp-consensus = { version = "0.10.0-dev", path = "../common", optional = true }
async-trait = { version = "0.1.50", optional = true }

[features]
default = ["std"]
std = [
	"sp-application-crypto/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-inherents/std",
	"sp-timestamp/std",
	"sp-consensus-slots/std",
	"sp-consensus",
	"async-trait",
]
